--- a/Settings.Sample/Dyoub.config
+++ b/Settings.Sample/Dyoub.config
@@ -2,4 +2,5 @@
 <appSettings>
   <add key="Database:Provider" value="MySql.Data.MySqlClient"/>
   <add key="Database:ConnectionString" value="Database=dyoub; Data Source=localhost; UserId=root; Password=123456"/>
+  <add key="Mailer" value="Local"/>
 </appSettings>
