--- a/Dyoub.App/Dyoub.App.csproj
+++ b/Dyoub.App/Dyoub.App.csproj
@@ -136,12 +136,47 @@
     <Compile Include="Data\Migrations\201703280220123_CreateTenant.Designer.cs">
       <DependentUpon>201703280220123_CreateTenant.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data\Migrations\201703281535001_CreateUser.cs" />
+    <Compile Include="Data\Migrations\201703281535001_CreateUser.Designer.cs">
+      <DependentUpon>201703281535001_CreateUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Data\Migrations\201703291154322_CreateClosureRequest.cs" />
+    <Compile Include="Data\Migrations\201703291154322_CreateClosureRequest.Designer.cs">
+      <DependentUpon>201703291154322_CreateClosureRequest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Extensions\ControllerExtensions.cs" />
+    <Compile Include="Extensions\HttpContextBaseExtension.cs" />
+    <Compile Include="Extensions\HttpRequestBaseExtensions.cs" />
+    <Compile Include="Extensions\HttpResponseBaseExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\DataModel\ApplicationContext.cs" />
-    <Compile Include="Models\DomainModel\Account\Tenant.cs" />
+    <Compile Include="Infrastructure\BackgroundTask.cs" />
+    <Compile Include="Models\EntityModel\Account\ClosureRequest.cs" />
+    <Compile Include="Models\EntityModel\Account\ClosureRequestQuery.cs" />
+    <Compile Include="Models\EntityModel\Account\TenantQuery.cs" />
+    <Compile Include="Models\EntityModel\Account\UserQuery.cs" />
+    <Compile Include="Models\EntityModel\ApplicationContext.cs" />
+    <Compile Include="Models\EntityModel\Account\Tenant.cs" />
+    <Compile Include="Models\EntityModel\Account\User.cs" />
+    <Compile Include="Models\ServiceModel\Account\Users\UserAuthentication.cs" />
+    <Compile Include="Models\ServiceModel\Account\Users\UserSignup.cs" />
+    <Compile Include="Models\ServiceModel\Mail\DetectedMailer.cs" />
+    <Compile Include="Models\ServiceModel\Mail\LocalMailer.cs" />
+    <Compile Include="Models\ServiceModel\Mail\Mailer.cs" />
+    <Compile Include="Models\ServiceModel\Security\AccessToken.cs" />
+    <Compile Include="Models\ServiceModel\Security\Sha256Hash.cs" />
+    <Compile Include="Models\ServiceModel\Security\UserIdentity.cs" />
+    <Compile Include="Models\ViewModel\Account\Users\SigninViewModel.cs" />
+    <Compile Include="Models\ViewModel\Account\Users\SignupViewModel.cs" />
+    <Compile Include="Results\Account\Users\SignupEmail.cs" />
+    <Compile Include="Results\Common\AccessDeniedStatusCode.cs" />
+    <Compile Include="Results\Common\ModelErrorsJson.cs" />
+    <Compile Include="Results\Common\NotFoundStatusCode.cs" />
+    <Compile Include="Results\Common\StringView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Results\Common\SuccessStatusCode.cs" />
+    <Compile Include="Results\Common\UnauthorizedStatusCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
@@ -151,6 +186,7 @@
     <Content Include="Views\Portfolio\Soon.cshtml" />
     <None Include="Properties\PublishProfiles\LocalRelease.pubxml" />
     <None Include="Properties\PublishProfiles\LocalDebug.pubxml" />
+    <Content Include="Views\Emails\pt-BR\SignupEmail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -160,12 +196,18 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\Seed\" />
-    <Folder Include="Models\ViewModel\" />
     <Folder Include="Scripts\spec\" />
+    <Folder Include="Views\Account\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Data\Migrations\201703280220123_CreateTenant.resx">
       <DependentUpon>201703280220123_CreateTenant.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Migrations\201703281535001_CreateUser.resx">
+      <DependentUpon>201703281535001_CreateUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Data\Migrations\201703291154322_CreateClosureRequest.resx">
+      <DependentUpon>201703291154322_CreateClosureRequest.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
