--- a/src/Settings.Sample/Dyoub.config
+++ b/src/Settings.Sample/Dyoub.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0"?>
 <appSettings>
   <add key="Database:Provider" value="MySql.Data.MySqlClient"/>
-  <add key="Database:ConnectionString" value="Database=dyoub; Data Source=localhost; UserId=root; Password=123456"/>
+  <add key="Database:ConnectionString" value="Database=app; Data Source=localhost; UserId=root; Password=123456"/>
   <add key="Mailer" value="Local"/>
 </appSettings>
