Rename config file

--- a/src/Settings.Sample/Dyoub.App.config
+++ b/src/Settings.Sample/Dyoub.App.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0"?>
+<!--
+  Copyright (c) Dyoub Applications. All rights reserved.
+  Licensed under MIT (https://github.com/dyoub/app/blob/master/LICENSE).
+  -->
 <appSettings>
   <add key="Database:Provider" value="MySql.Data.MySqlClient"/>
   <add key="Database:ConnectionString" value="Database=app; Data Source=localhost; UserId=root; Password=123456"/>
