--- a/src/Dyoub.App/Web.config
+++ b/src/Dyoub.App/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <appSettings file="..\Settings\Dyoub.config">
+  <appSettings file="..\Settings\Dyoub.App.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
