--- a/src/Dyoub.App/Dyoub.App.csproj
+++ b/src/Dyoub.App/Dyoub.App.csproj
@@ -132,6 +132,9 @@
     <EmbeddedResource Include="Data\Migrations\201703311528075_CreateTeam.resx">
       <DependentUpon>201703311528075_CreateTeam.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Data\Migrations\201703312008595_CreateTeamRole.resx">
+      <DependentUpon>201703312008595_CreateTeamRole.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Infrastructure\Mail\LocalMail.html" />
     <EmbeddedResource Include="Infrastructure\Logging\LocalLog.html" />
     <Content Include="Scripts\controllers\account\password-recoveries\new-password-recovery.controller.js" />
@@ -173,6 +176,10 @@
     <Compile Include="Data\Migrations\201703311528075_CreateTeam.Designer.cs">
       <DependentUpon>201703311528075_CreateTeam.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data\Migrations\201703312008595_CreateTeamRole.cs" />
+    <Compile Include="Data\Migrations\201703312008595_CreateTeamRole.Designer.cs">
+      <DependentUpon>201703312008595_CreateTeamRole.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="Extensions\HttpContextBaseExtension.cs" />
     <Compile Include="Extensions\HttpRequestBaseExtensions.cs" />
@@ -199,6 +206,7 @@
     <Compile Include="Models\EntityModel\Account\User.cs" />
     <Compile Include="Models\EntityModel\Manage\Store.cs" />
     <Compile Include="Models\EntityModel\Manage\Team.cs" />
+    <Compile Include="Models\EntityModel\Manage\TeamRole.cs" />
     <Compile Include="Models\EntityModel\TenantContext.cs" />
     <Compile Include="Models\ServiceModel\Account\AccountRecovery.cs" />
     <Compile Include="Models\ServiceModel\Account\UserAuthentication.cs" />
