--- a/src/Dyoub.App/packages.config
+++ b/src/Dyoub.App/packages.config
@@ -12,5 +12,6 @@
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net452" />
+  <package id="SharpRaven" version="2.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
