Fix 422 status code

--- a/src/Dyoub.App/Web.config
+++ b/src/Dyoub.App/Web.config
@@ -25,6 +25,7 @@
         <requestLimits maxAllowedContentLength="8388608" />
       </requestFiltering>
     </security>
+    <httpErrors errorMode="DetailedLocalOnly" existingResponse="PassThrough"></httpErrors>
     <httpProtocol>
       <customHeaders>
         <clear />
