--- a/src/Dyoub.App/Web.config
+++ b/src/Dyoub.App/Web.config
@@ -16,6 +16,14 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <caching>
+      <outputCacheSettings>
+        <outputCacheProfiles>
+          <!-- 1 day = 86400 seconds -->
+          <add name="Default" location="Client" duration="86400"/>
+        </outputCacheProfiles>
+      </outputCacheSettings>
+    </caching>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
